# codetrellis-matrix

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STATUS.md  WORKFLOW.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/: FUNDING.yml  copilot-instructions.md  session-learned-rules.md
.github/agents/: ct-implement.agent.md  ct-orchestrator.agent.md  ct-research.agent.md  ct-verify.agent.md
.github/workflows/: ci.yml  release.yml
best_practices/: PYTHON_BEST_PRACTICES.md
codetrellis/: __init__.py  __main__.py  absinthe_parser_enhanced.py  actix_parser_enhanced.py  adonisjs_parser_enhanced.py  akka_parser_enhanced.py  alpinejs_parser_enhanced.py  antd_parser_enhanced.py  apache_camel_parser_enhanced.py  apollo_parser_enhanced.py  aspnetcore_parser_enhanced.py  ast_parser.py  astro_parser_enhanced.py  automapper_parser_enhanced.py  axum_parser_enhanced.py  bash_parser_enhanced.py  bootstrap_parser_enhanced.py  build_contract.py  build_contracts_advanced.py  builder.py  c_parser_enhanced.py  cache.py  cache_optimizer.py  celery_parser_enhanced.py  chakra_parser_enhanced.py  chartjs_parser_enhanced.py  chi_parser_enhanced.py  cli.py  cobra_parser_enhanced.py  codeigniter_parser_enhanced.py  compressor.py  cpp_parser_enhanced.py  cross_language_types.py  csharp_parser_enhanced.py  css_parser_enhanced.py  d3js_parser_enhanced.py  dapper_parser_enhanced.py  dart_parser_enhanced.py  diesel_parser_enhanced.py  distributed_generator.py  (+127 more)
codetrellis/bpl/: __init__.py  models.py  repository.py  selector.py
codetrellis/extractors/: __init__.py  architecture_extractor.py  business_domain_extractor.py  cicd_extractor.py  config_extractor.py  config_template_extractor.py  database_architecture_extractor.py  discovery_extractor.py  docker_extractor.py  env_inference_extractor.py  error_extractor.py  generic_language_extractor.py  graphql_schema_extractor.py  http_api_extractor.py  interface_extractor.py  java_utils.py  jsdoc_extractor.py  logic_extractor.py  lsp_extractor.py  nestjs_extractor.py  openapi_extractor.py  progress_extractor.py  readme_extractor.py  route_extractor.py  runbook_extractor.py  security_extractor.py  semantic_extractor.py  service_extractor.py  store_extractor.py  sub_project_extractor.py  terraform_extractor.py  todo_extractor.py  type_extractor.py  websocket_extractor.py
codetrellis/parsers/: __init__.py  angular.py  proto.py  python_parser.py  typescript.py
codetrellis/plugins/: __init__.py  base.py  builtin.py  discovery.py  registry.py
docs/: BENCHMARKS.md  BUILD_CONTRACT.md  CLAUDE_DESKTOP_MCP_SETUP.md  COPILOT_SUPPORTED_TECHNOLOGIES.md  DEVOPS_PROFILE_CODETRELLIS_DISCUSSION.md  ELIXIR_SCANNER_EVALUATION.md  FEATURES.md  IMPROVEMENT_PLAN.md  JAVA_FRAMEWORK_ANALYSIS_REPORT.md  MATRIX_QUALITY_IMPROVEMENT_PLAN.md  MODULARIZATION_DESIGN.md  MONOLITH_MEASUREMENTS.md  MOTA_PLAN_v2_FINAL.md  MULTI_AGENT_PLAN_VALIDATION_TEMPLATE.md  PRODUCT_VISION.md  SCANNER_EVALUATION_REPORT.md  SKIPPED_TESTS.md  STIMULUS_HOTWIRE_ANALYSIS_REPORT.md  expo-evaluation-report.md  matrixbench_baseline.json  matrixbench_baseline.md  session-69-analysis-report.md
docs/Guids/: LANGUAGE_INTEGRATION_CHECKLIST.md  LANGUAGE_INTEGRATION_GUIDE.md
docs/bpl/: ARCHITECTURE.md  ROADMAP.md
docs/checklist/: BPL_CHECKLIST.md  BPL_SESSION_CHECKLIST_2026_02_06.md
docs/comparison_outputs/: COMPREHENSIVE_TOOL_ANALYSIS.md  TOOL_COMPARISON_REPORT.md  codetrellis-aider-repomap.txt  codetrellis-repomix.xml  sparse-reasoning-ai-aider-repomap.txt  trading-ui-aider-repomap.txt
docs/contracts/: ADVANCED_BUILD_CONTRACTS.md
docs/experiments/: LIVE_AB_EXPERIMENT_RESULTS.md  MATRIX_VS_BASELINE_EXPERIMENT.md
docs/gap_analysis/: CODETRELLIS_GAP_ANALYSIS.md  CODETRELLIS_OPTIMAL_COMMAND_ANALYSIS.md  CODETRELLIS_REMEDIATION_PLAN.md  CODETRELLIS_ROOT_VS_INDIVIDUAL_ANALYSIS.md  GAP_ANALYSIS_COMPARISON_REPORT.md  VALIDATION_FINDINGS.md  🔍 AugmentCode's Full Product Architectu.ini
docs/guides/: MCP_INTEGRATION_GUIDE.md  TOKEN_SAVINGS_ANALYSIS.md
docs/plan/: BPL_BUSINESS_STRATEGY.md  CODETRELLIS_V2_IMPLEMENTATION_PLAN.md  CODETRELLIS_V2_TESTING_CHECKLIST.md  CODETRELLIS_V4.1_TESTING_CHECKLIST.md  ENTERPRISE_BEST_PRACTICES_LIBRARY.md  MOTA_EXTENSION_INTEGRATION_PLAN.md  PYTHON_BEST_PRACTICES_INTEGRATION_PLAN.md  SYSTEMIC_IMPROVEMENT_PLAN.md  V5_UNIVERSAL_SCANNER_PLAN.md
docs/progress/: IMPLEMENTATION_PROGRESS.md
docs/prompt-lib/: prompt_forreading_pasa_prompt.md
docs/references/: CITATIONS.md
docs/reports/: CODETRELLIS_IMPROVEMENT_REPORT.md  CPP_VALIDATION_REPORT.md  C_VALIDATION_REPORT.md  EXPRESS_NESTJS_FASTIFY_INTEGRATION_ANALYSIS_REPORT.md  JAVASCRIPT_INTEGRATION_ANALYSIS_REPORT.md  POWERSHELL_INTEGRATION_ANALYSIS_REPORT.md  RUBY_FRAMEWORK_ANALYSIS_REPORT.md  SCAN_VALIDATION_REPORT.md  SQL_VALIDATION_REPORT.md  SWIFT_VALIDATION_REPORT.md  lit_web_components_analysis_report_v4.65.md  session-75-java-framework-parsers-round2-analysis.md  swr_scanner_evaluation_v4.58.md  tanstack_query_analysis_report.md
docs/research/: ADVANCED_TOPICS_REPORT.md  SUPERMEMORY_AND_MEMORY_LAYER_COMPETITIVE_ANALYSIS.md
docs/sessions/: 2026-01-31-CODETRELLIS-SESSION-SUMMARY.md  2026-02-01-CODETRELLIS-SESSION-SUMMARY.md  SESSION_2026-02-02_COMPLETE_SESSION.md  SESSION_2026-02-02_V4.1_SESSION2.md  SESSION_2026-02-02_V4.1_SESSION3_FINAL.md  SESSION_2026-02-02_V4.1_STABILIZATION.md  SESSION_SUMMARY_2026_02_01.md  (+1 more)
lsp/: extract-types.ts  package-lock.json  package.json
scripts/: analyze_sessions.py  bench_parse.py  check_apollo_scan.py  extract_copilot_history.py  install-global.sh  manifest_audit.py  run_matrixbench.py  smoke_test_advanced.sh  smoke_test_appendices.sh  smoke_test_build_contracts.sh  test_mcp_coverage.py  token_budget_validator.py  validate_practices.py  validate_xstate.py  verify_all.sh  verify_build.sh  verify_determinism.sh  verify_incremental.sh  verify_lint.sh  verify_tests.sh
tests/: eval_valtio.py  test_incremental_build.py  test_watcher.py
(+958 files in other folders)
